--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.8",
+    "@types/styled-components": "^5.1.9",
+    "@unform/core": "^2.1.6",
+    "@unform/web": "^2.1.6",
+    "polished": "^4.1.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "react-scripts": "4.0.1",
+    "styled-components": "^5.3.0",
     "typescript": "^4.0.3",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
