--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@types/styled-components": "^5.1.9",
     "@unform/core": "^2.1.6",
     "@unform/web": "^2.1.6",
+    "axios": "^0.21.1",
     "polished": "^4.1.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-scripts": "4.0.1",
+    "react-spring": "^9.2.1",
     "styled-components": "^5.3.0",
     "typescript": "^4.0.3",
+    "uuidv4": "^6.2.8",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.9"
   },
