--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@unform/core": "^2.1.6",
     "@unform/web": "^2.1.6",
     "axios": "^0.21.1",
+    "date-fns": "^2.23.0",
     "polished": "^4.1.2",
     "react": "^17.0.1",
+    "react-day-picker": "^7.4.10",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
